--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "dddice-js": "^0.19.23",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-icons": "^5.4.0",
+    "react-scripts": "5.0.1",
+    "rpg-dice-roller": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
