Was added auth page and registration page to code

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.2.0",
     "crypto-browserify": "^3.12.1",
     "dddice-js": "^0.19.23",
+    "express": "^4.21.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
