--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "crypto-browserify": "^3.12.1",
     "dddice-js": "^0.19.23",
     "express": "^4.21.2",
+    "mysql2": "^3.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
